fix: изменить высоту и z-index Marquee

--- a/src/components/Marquee/Marquee.scss
+++ b/src/components/Marquee/Marquee.scss
@@ -9,12 +9,12 @@
 .marquee {
   background-color: #000;
   bottom: 0;
-  z-index: 2;
+  z-index: 30;
   margin-top: 50px;
   position: fixed;
   width: 100vw;
   max-width: 100%;
-  height: 80px;
+  height: 60px;
   overflow-x: hidden;
   display: flex;
   align-items: flex-end;
